Spacing between topbar and navbar components

--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -11,7 +11,7 @@
 
 .topBar {
   width: 100% !important;
-  height: 55% !important;
+  height: max-content !important;
 }
 
 .bg-main {
@@ -28,8 +28,27 @@
 }
 
 .left-box-topbar {
-  width: 20% !important;
+  width: max-content !important;
   height: 100% !important;
+}
+
+.right-box-topbar {
+  width: 45%;
+  height: 100%;
+}
+
+#input::placeholder {
+  color: var(--text-color-main);
+  font-size: 0.95rem;
+}
+
+.after-item::after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  left: 0;
+  background-color: #1e36bd30;
 }
 
 @media only screen and (min-width: 1400px) {
