--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -39,6 +39,8 @@
   position: absolute;
   width: 100%;
   left: 0;
+  z-index: 1000;
+  bottom: 0;
   border-bottom: 1px solid #1e36bd1e;
   box-shadow: 0 2px 5px #1e36bd30 , 0 2px 5px #1e36bd30 , 0 2px 5px #1e36bd30;
 }
