--- a/src/Component/TrendSlider/TrendSlider.css
+++ b/src/Component/TrendSlider/TrendSlider.css
@@ -1,6 +1,7 @@
 .trend-img-st {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
   border-radius: 1rem;
+  display: block;
 }
