--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,9 @@
 .bg-offcanvas {
   background-color: var(--bg-offcanvas) !important;
 }
+
+@media only screen and (min-width: 1700px) {
+  .container {
+    max-width: 1500px !important;
+  }
+}
