--- a/src/Component/Storys/Storys.css
+++ b/src/Component/Storys/Storys.css
@@ -2,9 +2,11 @@
   position: relative !important;
   width: 80px !important;
   height: 80px !important;
-  border: 3px solid #ff0051 !important;
+  border: 4px solid #ff0051 !important;
   border-radius: 50% !important;
   overflow: hidden !important;
+  padding: 0 !important;
+  z-index: 1000;
 }
 
 .profile-story {
@@ -12,6 +14,6 @@
   top: 50% !important;  
   left: 50% !important; 
   width: 100% !important;  
+  object-fit: cover;
   transform: translate(-50%, -50%) !important;
-  border-radius: 50% !important;
 }
