--- a/src/Component/TrendSlider/TrendSlider.css
+++ b/src/Component/TrendSlider/TrendSlider.css
@@ -1,7 +1,17 @@
 .trend-img-st {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  border-radius: 1rem;
-  display: block;
+  width: 100% !important;
+  height: auto !important;
+  object-fit: cover !important;
+  border-radius: 1rem !important;
+  display: block !important;
+}
+
+.trend-card-slider-box-st {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: start !important;
+}
+
+.h-trend-card-slider-box {
+  height: 95% !important;
 }
