--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -31,7 +31,7 @@
   width: 100%;
   height: 1px;
   left: 0;
-  background-color: #1e36bd30;
+  background-color: var(--bg-head-section);
 }
 
 .after-item-shadow::after{
@@ -42,7 +42,7 @@
   z-index: 1000;
   bottom: 0;
   border-bottom: 1px solid #1e36bd1e;
-  box-shadow: 0 2px 5px #1e36bd30 , 0 2px 5px #1e36bd30 , 0 2px 5px #1e36bd30;
+  box-shadow: 0 2px 5px var(--bg-head-section) , 0 2px 5px var(--bg-head-section) , 0 2px 5px var(--bg-head-section);
 }
 
 .d_flex_lg {
