Responsiveness of PopularCategories component items

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
   --bg-offcanvas: #fffffff8;
   --bg-btn: #F04055;
   --bg-head-section: #1e36bd30;
-  --text-color-main: #00144a;
-  --subtext-color-main: #00144a;
+  --text-color-main: #021959;
+  --subtext-color-main: #021959;
   --text-hover: #f3273f;
 }
 
