--- a/src/Component/ShoppingPackage/ShoppingPackage.css
+++ b/src/Component/ShoppingPackage/ShoppingPackage.css
@@ -16,3 +16,12 @@
   border: 1px solid var(--bg-head-section);
   border-radius: 0.7rem;
 }
+
+@media only screen and (max-width:400px) {
+  .img-banner-package {
+    width: 100%;
+    height: 10rem;
+    border-radius: 1rem;
+    object-fit: cover;
+  }
+}
