--- a/src/Component/BlogComponent/BlogComponent.css
+++ b/src/Component/BlogComponent/BlogComponent.css
@@ -5,7 +5,17 @@
   height: 100% !important;
   bottom: 0 !important;
   left: 0 !important;
-  background-image: linear-gradient(180deg, rgba(2, 25, 89, 0) 0%, #021959 100%) !important;
+  background-image: linear-gradient(180deg,#021959cc -5%, #02195952 50%, #021959cc 100%) !important;
   opacity: 0.7 !important;
   border-radius: 1rem !important;
+}
+
+.fs-xs-banner-blog {
+  font-size: 1rem !important;
+}
+
+@media only screen and (max-width:576px) {
+  .fs-xs-banner-blog {
+    font-size: 0.8rem !important;
+  }
 }
