--- a/src/Component/BlogComponent/BlogComponent.css
+++ b/src/Component/BlogComponent/BlogComponent.css
@@ -5,9 +5,36 @@
   height: 100% !important;
   bottom: 0 !important;
   left: 0 !important;
-  background-image: linear-gradient(180deg,#021959cc -5%, #02195952 50%, #021959cc 100%) !important;
+  background-image: linear-gradient(180deg, #021959cc -5%, #02195952 50%, #021959cc 100%) !important;
   opacity: 0.7 !important;
   border-radius: 1rem !important;
+}
+
+.img-banner-main-blog {
+  height: 100% !important;
+  width: 100% !important;
+  border-radius: 1rem !important;
+  object-fit: cover !important;
+}
+
+.text-st-blog-suggested {
+  white-space: nowrap !important;
+  text-overflow: ellipsis !important;
+  overflow: hidden !important;
+}
+
+.title-banner-main-blog {
+  text-shadow: 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #fff;
+}
+
+.SuggestedBlog::after {
+  content: '' !important;
+  position: absolute !important;
+  width: 100% !important;
+  height: 1px !important;
+  bottom: -0.5rem !important;
+  left: 0 !important;
+  background-color: var(--bg-head-section);
 }
 
 .fs-xs-banner-blog {
@@ -18,18 +45,38 @@
   height: 100% !important;
 }
 
+.w-item-suggested-blog {
+  width: 65% !important;
+}
+
+.fs-suggested-blog-text {
+  font-size: 0.75rem !important;
+}
+
+.mt-subtext-suggested-blog {
+  margin: 0 !important;
+}
+
 @media only screen and (max-width:768px) {
   .h-blog-item {
     height: 24rem !important;
   }
 }
+
 @media only screen and (max-width:576px) {
   .fs-xs-banner-blog {
     font-size: 0.8rem !important;
   }
+  .mt-subtext-suggested-blog {
+    margin-top: 1rem !important;
+  }
 }
+
 @media only screen and (max-width:380px) {
   .h-blog-item {
     height: 21rem !important;
+  }
+  .w-item-suggested-blog {
+    width: 50% !important;
   }
 }
