--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   --bg-btn: #F04055;
   --bg-head-section: #1e36bd19;
   --text-color-main: #021959;
-  --subtext-color-main: #4F5E86;
+  --subtext-color-main: #98A1BE;
   --text-hover: #f3273f;
 }
 
