--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -1,3 +1,20 @@
 .footer-shadow {
   box-shadow: 0 0 10px var(--bg-head-section) !important;
 }
+
+.TitleSiteFooter::after {
+  content: '' !important;
+  position: absolute !important;
+  width: 100% !important;
+  height: 1px !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  background-color: var(--bg-head-section) !important;
+}
+
+.ItemSiteFooter {
+  transition: 200ms !important;
+}
+.ItemSiteFooter:hover {
+  color: var(--text-hover) !important;
+}
