--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -37,6 +37,16 @@
   color: var(--text-color-main) !important;
 }
 
+.call-info-footer::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  top: 0;
+  left: 0;
+  background-color: var(--bg-head-section);
+}
+
 @media only screen and (min-width:992px) {
   .p-lg-namad-img {
     padding: 0.35rem !important;
