--- a/src/Component/BoxCards/BoxCards.css
+++ b/src/Component/BoxCards/BoxCards.css
@@ -16,7 +16,7 @@
 }
 .card {
   border: 0 !important;
-  box-shadow: 0 0 5px var(--bg-head-section);
+  box-shadow: 0 0 15px var(--bg-head-section);
 }
 
 .fs-price-card {
@@ -31,6 +31,19 @@
 .fs-btn-card {
   font-size: 1rem !important;
 }
+
+@media only screen and (min-width:1200px) {
+  .card {
+    padding: 0 0.8rem !important;
+  }
+}
+
+@media only screen and (min-width:1400px) {
+  .card {
+    padding: 0 0.5rem !important;
+  }
+}
+
 
 @media only screen and (max-width:400px) {
   .fs-btn-card {
