--- a/src/Pages/Product/Product.css
+++ b/src/Pages/Product/Product.css
@@ -10,3 +10,20 @@
 .iiz>* {
   cursor:default !important;
 }
+
+.Subsamples-img-parent {
+  padding-right: 2.5rem !important;
+  padding-left: 2.5rem !important;
+}
+
+@media only screen and (max-width:576px) {
+  .Subsamples-img-parent {
+    padding-right: 0.5rem !important;
+    padding-left: 0.5rem !important;
+  }
+}
+
+.Subsamples-img {
+  border: 1px solid var(--bg-head-section);
+  cursor: pointer;
+}
