--- a/src/Pages/Product/Product.css
+++ b/src/Pages/Product/Product.css
@@ -94,6 +94,10 @@
   margin: 0;
 }
 
+.flex-column-sm {
+  flex-direction: row !important;
+}
+
 @media only screen and (max-width:576px) {
   .Subsamples-img-parent {
     padding-right: 0.5rem !important;
@@ -121,5 +125,11 @@
 
   .shoping-card-title {
     font-size: 0.75rem !important;
+  }
+}
+
+@media only screen and (max-width:400px) {
+  .flex-column-sm {
+    flex-direction: column !important;
   }
 }
