--- a/src/Pages/Product/Product.css
+++ b/src/Pages/Product/Product.css
@@ -98,6 +98,10 @@
   flex-direction: row !important;
 }
 
+.product-content {
+  box-shadow: 0 0 15px var(--bg-head-section);
+}
+
 @media only screen and (max-width:576px) {
   .Subsamples-img-parent {
     padding-right: 0.5rem !important;
